improvements, and fixes:

- Adds support for more than one Key Management Service (KMS) provider of the same type.
  To learn more about KMS providers, see
  :manual:`Queryable Encryption </core/queryable-encryption/>` in the {+server+}
  manual.
- Adds support for v2 of the Queryable Encryption range protocol. Range indexes for
  Queryable Encryption are now GA.
- Adds support for the ``type`` field when creating indexes. To learn more about
  creating indexes, see :manual:`Indexes </indexes/>` in the {+server+} manual.
- Implements the Happy Eyeballs algorithm for managing
  TCP connections. To learn more about this algorithm, see the Rust documentation
  for the `happy_eyeballs <https://docs.rs/happy_eyeballs/0.2.0/happy_eyeballs/>`__ crate.
- The driver publishes a ``TopologyDescriptionChangedEvent`` event when a topology
  closes.

To learn more about this release, see the `v3.1 Release Notes <{+driver-source+}/releases/tag/v3.1.0>`__
on GitHub.

.. _rust-version-3.0.1:

What's New in 3.0.1
---------------------

The {+driver-short+} v3.0.1 release includes the following features,
improvements, and fixes:

- Fixes an issue in which aggregations wouldn't compile when run within explicit
  sessions and also implemented custom types.

- Fixes an issue in which the ``Collection::watch()`` method didn't use the type
  parameter of the ``Collection`` instance it was run on.

To learn more about this release, see the `v3.0.1 Release Notes <{+driver-source+}/releases/tag/v3.0.1>`__
on GitHub.

.. _rust-version-3.0:

What's New in 3.0
-----------------

The {+driver-short+} v3.0 release includes the following features, improvements, and fixes:

- Implements a fluent API, which introduces the following syntax changes for passing options and
  starting sessions:

  - To set asynchronous method options, chain option builder methods directly to the method call
    instead of passing an options struct parameter.
  