@@ -41,14 +41,12 @@ Search Overview </atlas-vector-search/vector-search-overview/>`.
    Atlas Search feature. To learn about this feature, see the
    :atlas:`Atlas Search Overview </atlas-search/atlas-search-overview/>`.
 
-.. TODO update when we add VS type updates to the linked page
+Atlas Vector Search Index
+~~~~~~~~~~~~~~~~~~~~~~~~~
 
-.. Atlas Vector Search Index
-.. ~~~~~~~~~~~~~~~~~~~~~~~~~
-.. 
-.. Before you can perform Atlas Vector Search queries, you must create an
-.. Atlas Vector Search index on your collection. To learn more about
-.. creating this index type, see the :ref:`rust-atlas-search-indexes` guide.
+Before you can perform Atlas Vector Search queries, you must create an
+Atlas Vector Search index on your collection. To learn more about
+creating this index type, see the :ref:`rust-atlas-search-indexes` guide.
 
 Vector Search Aggregation Stage
 -------------------------------
