@@ -19,7 +19,7 @@ Indexes
 
 .. toctree::
 
-   Atlas Search Indexes </fundamentals/indexes/atlas-search-indexes>
+   Atlas Search & Vector Search Indexes </fundamentals/indexes/atlas-search-indexes>
 
 Overview
 --------
@@ -164,7 +164,7 @@ The following code creates an ascending index on the
 .. io-code-block::
    :copyable: true
 
-   .. input:: /includes/fundamentals/code-snippets/indexes.rs
+   .. input:: /includes/fundamentals/code-snippets/indexes/indexes.rs
       :start-after: begin-single-field
       :end-before: end-single-field
       :language: rust
@@ -200,7 +200,7 @@ The following code creates a compound index on the
 .. io-code-block::
    :copyable: true
 
-   .. input:: /includes/fundamentals/code-snippets/indexes.rs
+   .. input:: /includes/fundamentals/code-snippets/indexes/indexes.rs
       :start-after: begin-compound
       :end-before: end-compound
       :language: rust
@@ -233,7 +233,7 @@ The following code creates a multikey index on the
 .. io-code-block::
    :copyable: true
 
-   .. input:: /includes/fundamentals/code-snippets/indexes.rs
+   .. input:: /includes/fundamentals/code-snippets/indexes/indexes.rs
       :start-after: begin-multikey
       :end-before: end-multikey
       :language: rust
@@ -284,7 +284,7 @@ The following code creates a clustered index with default configuration on the
 ``_id`` field when creating a new collection called ``items`` in the
 ``sample_training`` database:
 
-.. literalinclude:: /includes/fundamentals/code-snippets/indexes.rs
+.. literalinclude:: /includes/fundamentals/code-snippets/indexes/indexes.rs
    :start-after: begin-clustered
    :end-before: end-clustered
    :language: rust
@@ -322,7 +322,7 @@ The following code creates a text index on the ``body`` field in the
 .. io-code-block::
    :copyable: true
 
-   .. input:: /includes/fundamentals/code-snippets/indexes.rs
+   .. input:: /includes/fundamentals/code-snippets/indexes/indexes.rs
       :start-after: begin-text
       :end-before: end-text
       :language: rust
@@ -384,7 +384,7 @@ The following code creates a geospatial ``2dsphere`` index on the
 .. io-code-block::
    :copyable: true
 
-   .. input:: /includes/fundamentals/code-snippets/indexes.rs
+   .. input:: /includes/fundamentals/code-snippets/indexes/indexes.rs
       :start-after: begin-geo
       :end-before: end-geo
       :language: rust
@@ -417,7 +417,7 @@ The following code shows how to set the ``unique`` field to ``true`` in an
 ``IndexOptions`` instance and pass these options when creating an
 ``IndexModel``:
 
-.. literalinclude:: /includes/fundamentals/code-snippets/indexes.rs
+.. literalinclude:: /includes/fundamentals/code-snippets/indexes/indexes.rs
    :start-after: begin-unique
    :end-before: end-unique
    :language: rust
@@ -440,7 +440,7 @@ name of the index to the ``drop_index()`` method.
 The following example removes an index called ``city_1`` from the
 ``sample_training.zips`` collection:
 
-.. literalinclude:: /includes/fundamentals/code-snippets/indexes.rs
+.. literalinclude:: /includes/fundamentals/code-snippets/indexes/indexes.rs
    :start-after: begin-drop
    :end-before: end-drop
    :language: rust
