@@ -79,8 +79,9 @@ improvements, and fixes:
   manual.
 - Adds support for v2 of the Queryable Encryption range protocol. Range indexes for
   Queryable Encryption are now GA.
-- Adds support for the ``type`` field when creating indexes. To learn more about
-  creating indexes, see :manual:`Indexes </indexes/>` in the {+server+} manual.
+- Adds the ``type`` field to the ``SearchIndexModel`` type to allow
+  programmatic creation of Atlas Search and Vector Search indexes. To learn
+  more, see the :ref:`rust-atlas-search-indexes` guide.
 - Implements the Happy Eyeballs algorithm for managing
   TCP connections. To learn more about this algorithm, see the Rust documentation
   for the `happy_eyeballs <https://docs.rs/happy_eyeballs/0.2.0/happy_eyeballs/>`__ crate.
